# setup.cfg file at the root directory
[metadata]
name = analytics
version = 0.1.0
author = Abdullah Reza
description = Analytics scripts and other data processing for Cultive8 Technologies Limited
long_description = Analytics scripts and other data processing for Cultive8 Technologies Limited
url = https://github.com/rezaabdullah/cultive8
keywords = analytics, data pre-processing, data processing, data post-processing
[options]
python_requires = >=3.7
install_requires = 
    pandas
    numpy
[options.extras_require]
# test = 
#     pytest
#     coverage
# [options.package_data]
# sample = 
#     example_data.csv'